--- a/projeto/cliente/templates/fiador_form.html
+++ b/projeto/cliente/templates/fiador_form.html
@@ -64,7 +64,7 @@
    <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->    
 
     <div class="tab">
-        <button class="tablinks" onclick="openCity(event, 'Page1')">Dados Pessoais</button>
+        <button class="tablinks active" onclick="openCity(event, 'Page1')">Dados Pessoais</button>
         <button class="tablinks" onclick="openCity(event, 'Page2')">Dados do Local de Trabalho</button>
         <button class="tablinks" onclick="openCity(event, 'Page3')">Dados Bancários</button>        
     </div>
@@ -218,13 +218,14 @@
                 <div class="form-group" >                
                     <label for="" class="required">{{form.celular1.label}} </label>        
                     {% render_field form.celular1 class="form-control cel-phone-mask" type="text"%}
+                    <label class="checkbox-inline"> {{form.whatsapp1.label}} <input type="checkbox" value="whatsapp1" id="whatsapp1" name="whatsapp1"></label>
                 </div>
             </div>
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.celular2.label}} </label>        
                     {% render_field form.celular2 class="form-control cel-phone-mask" type="text"%}
-                    <label class="checkbox-inline"> {{form.whatsapp.label}} <input type="checkbox" value="whatsapp" id="whatsapp" name="whatsapp"></label>
+                    <label class="checkbox-inline"> {{form.whatsapp2.label}} <input type="checkbox" value="whatsapp2" id="whatsapp2" name="whatsapp2"></label>
                 </div>
             </div>
             <div class="col-sm-4">                    
@@ -260,13 +261,14 @@
                 <div class="form-group" >                
                     <label for="" >{{form.celular1_trabalho.label}} </label>        
                     {% render_field form.celular1_trabalho class="form-control" %}
+                    <label class="checkbox-inline"> {{form.whatsapp1_trabalho.label}} <input type="checkbox" value="whatsapp1" id="whatsapp1" name="whatsapp1"></label>
                 </div>
             </div>
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.celular2_trabalho.label}} </label>        
                     {% render_field form.celular2_trabalho class="form-control" %}
-                    <label class="checkbox-inline"> {{form.whatsapp_trabalho.label}} <input type="checkbox" value="whatsapp" id="whatsapp" name="whatsapp"></label>
+                    <label class="checkbox-inline"> {{form.whatsapp2_trabalho.label}} <input type="checkbox" value="whatsapp2" id="whatsapp2" name="whatsapp2"></label>
             </div>
             </div>
             <div class="col-sm-2">                    
@@ -282,10 +284,10 @@
                     {% render_field form.rua_trabalho class="form-control"  %}
                 </div>
             </div>               
-            <div class="col-sm-5">                    
+            <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.bairro_trabalho.label}} </label>        
-                    {% render_field form.bairro_trabalho class="form-control"  %}
+                    {% render_field form.bairro_trabalho class="form-control" %}
                 </div>
             </div>
             <div class="col-sm-4">                    
@@ -300,7 +302,7 @@
                     {% render_field form.uf_trabalho class="form-control" %}
                 </div>
             </div>
-            <div class="col-sm-1">                    
+            <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.referencia_trabalho.label}} </label>        
                     {% render_field form.referencia_trabalho class="form-control" %}
