--- a/projeto/core/templates/cliente_select.html
+++ b/projeto/core/templates/cliente_select.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="jumbotron">
+    <div class="jumbotron jumbotron-fluid shadow rounded">
         <div class="container">
             <h1>Escolha um Cliente</h1>           
 
