--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -211,7 +211,7 @@ window.onload = function imprimir(){
                
         valor_parcela = (cap_iof*(1+(qtd_parcelas*9.5)/100))/qtd_parcelas
         valor_parcela = String(toFixed(valor_parcela, 2))      
-        valor_devido = valor_parcela*qtd_parcelas
+        valor_devido = valor_parcela
     
 
     //VARIÁVEIS DA DATA DO EMPRESTIMO
@@ -248,11 +248,11 @@ window.onload = function imprimir(){
     var valor_juros_dia = (valor_da_parcela*0.0066).toFixed(2)
     var contador_parcela = 0
     
-    var real = parseInt('{{object.valor_emprestado}}')	
-    real = String(real).extenso()
+    // var real = parseInt('{{object.valor_emprestado}}')	
+    // real = String(real).extenso()
     
-    var centavos = parseFloat((valor_da_parcela-valor_da_parcela_int)).toFixed(2)	
-    centavos = String(centavos).extenso()
+    // var centavos = parseFloat((valor_da_parcela-valor_da_parcela_int)).toFixed(2)	
+    // centavos = String(centavos).extenso()
     
     //VARIÁVEIS DO CLIENTE CPF
     var cliente         = "{{object.cliente.nome}}"
@@ -317,6 +317,23 @@ window.onload = function imprimir(){
     var fiador_                = "{{object.cliente.fiador.nome}}"
 
 
+    //CORREÇÃO DO VALOR TOTAL
+    var valorTotal = parseFloat("{{object.valor_prestacao|floatformat:2}}".replace(',', '.'))
+    var parceTotal = parseInt("{{object.qtd_parcelas|floatformat:2}}".replace(',', '.'))
+
+    var resultado = 0 
+    resultado = parseFloat(valorTotal*parceTotal).toFixed(2)
+    resultado_ext = resultado
+    resultado_int = parseInt(resultado_ext)
+    resultado = resultado.replace('.', ',')
+
+    var real = parseInt(resultado_ext)	
+    real = String(real).extenso()
+    
+    var centavos = parseFloat((resultado_ext-resultado_int)).toFixed(2)	
+    centavos = String(centavos).extenso()    
+    
+
     if(!fiador_){ 
         contrato.innerHTML +=
         `
@@ -336,7 +353,7 @@ window.onload = function imprimir(){
             têm justo e contratado o seguinte:</p>
             <p class="fontmenor">
             <b>CLÁUSULA 1ª</b>  - O <b>DEVEDOR</b> se compromete a pagar ao <b>CREDOR</b> 
-            a título de empréstimo, a quantia acertada de R$ ${"{{object.valor_emprestado}}"} (${real} reais e ${centavos} centavos), 
+            a título de empréstimo, a quantia acertada de R$ ${resultado} (${real} reais e ${centavos} centavos), 
             dividida em ${"{{object.qtd_parcelas}}"}(${qtd_parcelas_extenso}) parcelas de iguais valores, já acrescidos de juros remuneratórios, 
             nos moldes da legislação em vigor (Dec. 22.626/33 c/c art. 591 CC/02), pagas conforme boleto bancário, ou outro meio disponibilizado e 
             pactuado, mediante as condições seguintes.
@@ -392,6 +409,7 @@ window.onload = function imprimir(){
                     </td>
                     <td width="39%">
                         R$ ${"{{object.valor_prestacao}}"}
+                    </td>
                 </tr>
             </table>
         `
