++residente em++ acrescentado no contrato

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -345,7 +345,7 @@ window.onload = function imprimir(){
             Josimério de Abreu Silva, (Brasileiro, Solteiro, RG 1.791.746 SSP RN, CPF 029.388.274-66), 
             de ora em diante denominado simplesmente por CREDOR, e, de outro lado, ${cliente}
             (${nacionalidade}, ${estado_civil}, ${nome_fantasia}, RG ${"{{object.cliente.rg}}"} ${orgao_expedidor}, CPF ${cpf}, 
-            ${rua}, ${numero_casa}, ${bairro}, ${cidade} ${uf}) de ora em diante denominado simplesmente DEVEDOR, 
+            Residente em ${rua}, ${numero_casa}, ${bairro}, ${cidade} ${uf}) de ora em diante denominado simplesmente DEVEDOR, 
             têm justo e contratado o seguinte:</p>
             <p class="fontmenor">
             <b>CLÁUSULA 1ª</b>  - O <b>DEVEDOR</b> se compromete a pagar ao <b>CREDOR</b> 
@@ -462,7 +462,7 @@ window.onload = function imprimir(){
             <p class="fontmenor" >Pelo presente contrato particular de empréstimo de dinheiro,de um lado, 
             Josimério de Abreu Silva, (Brasileiro, Solteiro, RG 1.791.746 SSP RN, CPF 029.388.274-66), 
             de ora em diante denominado simplesmente por CREDOR, e, de outro lado, ${cliente}
-            (${nacionalidade}, ${estado_civil}, ${nome_fantasia}, RG ${"{{object.cliente.rg}}"} ${orgao_expedidor}, CPF ${cpf}, 
+            (${nacionalidade}, ${estado_civil}, ${nome_fantasia}, RG ${"{{object.cliente.rg}}"} ${orgao_expedidor}, CPF ${cpf}, Residente em 
             ${rua}, ${numero_casa}, ${bairro}, ${cidade} ${uf} de ora em diante denominado simplesmente DEVEDOR, 
             têm justo e contratado o seguinte:</p>
             <p class="fontmenor">
