Data do carnê corrigida

--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -465,6 +465,10 @@
 			`	
 		}	
 
+		//VARIÁVEIS DA DATA DO EMPRESTIMO
+		var contador_meses = 0
+		var contador_anos  = 0
+		var dataEmprestimo = "{{ object.data_emprestimo}}"		
 		var dia
 		var mes
 		var ano
