Correção do contratante no contrato CNPJ

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -922,7 +922,7 @@ window.onload = function imprimir(){
 
         <div class="paragrafo" style="text-align:center">
             ____________________________________________________________<br>
-            <strong> REGINA MARIA DE FRANÇA 031.585.554-17 </strong><br>
+            <strong> ${razao_social} </strong><br>
             CONTRATANTE MUTUÁRIA            
         </div>
         <div class="paragrafo" style="text-align:center">
