--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -579,8 +579,8 @@
 				<!--5º linha-->			
 				<tr>
 					<td width="15%">
-						<p class="content left">&nbsp(-) Descontos </p>							
-											
+						<p class="content left">&nbsp(-) Descontos </p>
+						<p class="content left">&nbsp </p>	
 					</td>
 					<td width="1px"></td>
 					<td colspan="5" rowspan="4">
@@ -591,26 +591,31 @@
 					</td>
 					<td width="15%">
 						<p class="content left">&nbsp(-) Descontos </p>
+						<p class="content left">&nbsp </p>
 					</td>
 				</tr>	
 				<!--6º linha-->				
 				<tr>
 					<td width="15%">
 						<p class="content left">&nbsp(+) Acréscimos </p>
+						<p class="content left">&nbsp </p>
 					</td>
 					<td width="1px"></td>
 					<td width="15%">
 						<p class="content left">&nbsp(+) Acréscimos </p>
+						<p class="content left">&nbsp </p>
 					</td>
 				</tr>
 				<!--7º linha-->
 				<tr>
 					<td width="15%">
 						<p class="content left">&nbsp(=) Valor Pago  </p>
+						<p class="content left">&nbsp </p>
 					</td>
 					<td width="1px"></td>
 					<td width="15%">
 						<p class="content left">&nbsp(=) Valor Pago  </p>	
+						<p class="content left">&nbsp </p>
 					</td>
 				</tr>
 				<!--8º linha-->
