--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -719,7 +719,7 @@ window.onload = function imprimir(){
                         ${dia}/${meses[mes-1]}/${ano}
                     </td>
                     <td width="39%">
-                        R$ ${"{{object.valor_prestacao}}"}
+                        R$ ${valor_devido}
                 </tr>
             </table>
         `
