Valor devido corrigido em todos os contratos

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -409,7 +409,7 @@ window.onload = function imprimir(){
                         ${dia}/${meses[mes-1]}/${ano}
                     </td>
                     <td width="39%">
-                        R$ ${"{{object.valor_prestacao}}"}
+                        R$ ${valor_devido}
                     </td>
                 </tr>
             </table>
@@ -527,7 +527,7 @@ window.onload = function imprimir(){
                         ${dia}/${meses[mes-1]}/${ano}
                     </td>
                     <td width="39%">
-                        R$ ${"{{object.valor_prestacao}}"}
+                        R$ ${valor_devido}
                 </tr>
             </table>
         `
