--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -276,7 +276,7 @@ window.onload = function imprimir_promissoria(){
                 <b class="fontmenor"> Vencimento: ${dia} de ${mes} de ${ano} </b> 
 
                 <b>
-                    <b class="bordinha fontmaior1">R$&nbsp&nbsp${dinheiro}&nbsp</b> 
+                    <b class="bordinha fontmaior1">R$&nbsp&nbsp${"{{object.valor_prestacao}}"}&nbsp</b> 
                 </b>           
                 <br><br> 
                 <p class="fontmenor a" align="Justify">                     
@@ -327,7 +327,7 @@ window.onload = function imprimir_promissoria(){
                 <b class="fontmenor"> Vencimento: ${dia} de ${mes} de ${ano} </b> 
 
                 <b>
-                    <b class="bordinha fontmaior1">R$&nbsp&nbsp${dinheiro}&nbsp</b> 
+                    <b class="bordinha fontmaior1">R$&nbsp&nbsp${"{{object.valor_prestacao}}"}&nbsp</b> 
                 </b>           
                 <br><br> 
                 <p class="fontmenor a" align="Justify">                     
@@ -377,7 +377,7 @@ window.onload = function imprimir_promissoria(){
                     <b class="fontmenor"> Vencimento: ${dia} de ${mes} de ${ano} </b> 
     
                     <b>
-                        <b class="bordinha fontmaior1">R$&nbsp&nbsp${dinheiro}&nbsp</b> 
+                        <b class="bordinha fontmaior1">R$&nbsp&nbsp${"{{object.valor_prestacao}}"}&nbsp</b> 
                     </b>           
                     <br><br> 
                     <p class="fontmenor a" align="Justify">                     
