Retirei o onblur do emprestimo_edit+

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -722,7 +722,7 @@ window.onload = function imprimir(){
                         ${dia}/${meses[mes-1]}/${ano}
                     </td>
                     <td width="39%">
-                        R$ ${valor_parcela} tk
+                        R$ ${valor_parcela}
                 </tr>
             </table>
         `
