correção de posição cpf em promissória

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -396,8 +396,7 @@ window.onload = function imprimir_promissoria(){
                         EMITENTE 
                     </div>
                     <div class="fontmenor emitente2" style="text-align:center">
-                        CPF <br>
-                        ${"{{object.cliente.cpf}}"}  
+                        CPF ${"{{object.cliente.cpf}}"}  
                     </div>
                     <div class="fontmenor emissao" style="text-align:center">                   
                         <strong><u> ${"{{object.data_emprestimo}}"}</u></strong>
