correção da quantia acertada no contrato

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -475,7 +475,7 @@ window.onload = function imprimir(){
             têm justo e contratado o seguinte:</p>
             <p class="fontmenor">
             <b>CLÁUSULA 1ª</b>  - O <b>DEVEDOR</b> e seu(s) fiador(es) se comprometem a pagar ao <b>CREDOR</b> 
-            a título de empréstimo, a quantia acertada de R$ ${"{{object.valor_emprestado}}"} (${real} reais e ${centavos} centavos), 
+            a título de empréstimo, a quantia acertada de R$ ${resultado} (${real} reais e ${centavos} centavos), 
             dividida em ${"{{object.qtd_parcelas}}"}(${qtd_parcelas_extenso}) parcelas de iguais valores, já acrescidos de juros remuneratórios, 
             nos moldes da legislação em vigor (Dec. 22.626/33 c/c art. 591 CC/02), pagas conforme boleto bancário, ou outro meio disponibilizado e 
             pactuado, mediante as condições seguintes.
