correção de numero de contrato+

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -608,7 +608,7 @@ window.onload = function imprimir(){
 
         <div class="num_contrato" > 
             <strong> Nº DO CONTRATO </strong> <br>
-            
+            &nbsp
         </div>
         <br>
         <div class="credito" >
